--- a/packages/rma-frontend/src/app/warranty-ui/view-warranty-claims/service-invoices/add-service-invoice/add-service-invoice.page.html
+++ b/packages/rma-frontend/src/app/warranty-ui/view-warranty-claims/service-invoices/add-service-invoice/add-service-invoice.page.html
@@ -177,4 +177,85 @@
       </ion-card-content>
     </ion-card>
   </form>
+
+  <ion-card>
+    <ion-card-header>
+      <ion-row class="align">
+        <ion-col>
+          <ion-card-title>
+            <ion-text color="tertiary">
+              Items
+            </ion-text>
+          </ion-card-title>
+        </ion-col>
+        <ion-col class="ion-text-right" size="auto">
+          <ion-button
+            color="tertiary"
+            fill="outline"
+            matTooltip=" ( ctrl + i ) "
+            matTooltipPosition="above"
+            matTooltipClass="tooltip"
+            (ctrlI)="addItem()"
+            (click)="addItem()"
+          >
+            Add
+          </ion-button>
+        </ion-col>
+      </ion-row>
+    </ion-card-header>
+    <ion-card-content class="ion-no-padding">
+      <ion-item lines="none">
+        <table mat-table [dataSource]="item" style="width: 100%;">
+          <!-- Item Column -->
+          <ng-container matColumnDef="item group">
+            <th mat-header-cell *matHeaderCellDef>Item Group</th>
+            <td mat-cell *matCellDef="let item">
+              {{item.itemGroup}}
+            </td>
+            <td mat-footer-cell *matFooterCellDef></td>
+          </ng-container>
+          <ng-container matColumnDef="item name">
+            <th mat-header-cell *matHeaderCellDef>Item Name</th>
+            <td mat-cell *matCellDef="let item">
+              {{item.itemName}}
+            </td>
+            <td mat-footer-cell *matFooterCellDef></td>
+          </ng-container>
+          <ng-container matColumnDef="unit">
+            <th mat-header-cell *matHeaderCellDef>Unit</th>
+            <td mat-cell *matCellDef="let item">{{item.unit}}</td>
+            <td mat-footer-cell *matFooterCellDef>Total</td>
+          </ng-container>
+          <ng-container matColumnDef="quantity">
+            <th mat-header-cell *matHeaderCellDef>Quantity</th>
+            <td mat-cell *matCellDef="let item">
+              {{item.quantity}}
+            </td>
+            <td mat-footer-cell *matFooterCellDef></td>
+          </ng-container>
+          <ng-container matColumnDef="total">
+            <th mat-header-cell *matHeaderCellDef>Total</th>
+            <td mat-cell *matCellDef="let item">
+              {{item.total | currency}}
+            </td>
+            <td mat-footer-cell *matFooterCellDef>
+              {{getTotalCost() | currency}}
+            </td>
+            <td mat-cell *matCellDef="let item">
+              {{item.total}}
+            </td>
+          </ng-container>
+          <tr
+            mat-header-row
+            *matHeaderRowDef="displayedColumns sticky:true"
+          ></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+          <tr
+            mat-footer-row
+            *matFooterRowDef="displayedColumns sticky:true"
+          ></tr>
+        </table>
+      </ion-item>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
