--- a/packages/rma-frontend/src/app/warranty-ui/view-warranty-claims/service-invoices/add-service-invoice/add-service-invoice.page.html
+++ b/packages/rma-frontend/src/app/warranty-ui/view-warranty-claims/service-invoices/add-service-invoice/add-service-invoice.page.html
@@ -205,56 +205,140 @@
     </ion-card-header>
     <ion-card-content class="ion-no-padding">
       <ion-item lines="none">
-        <table mat-table [dataSource]="item" style="width: 100%;">
-          <!-- Item Column -->
-          <ng-container matColumnDef="item group">
-            <th mat-header-cell *matHeaderCellDef>Item Group</th>
-            <td mat-cell *matCellDef="let item">
-              {{item.itemGroup}}
-            </td>
-            <td mat-footer-cell *matFooterCellDef></td>
+        <mat-table #table [dataSource]="dataSource" style="width: 100%;">
+          <ng-container matColumnDef="item_group">
+            <mat-header-cell *matHeaderCellDef>Item Group</mat-header-cell>
+            <mat-cell *matCellDef="let row;let i = index">
+              <ng-container *ngIf="row.item_group">
+                {{row.item_group}}
+              </ng-container>
+              <span class="add-comment" *ngIf="!row.item_group">
+                Add an item Group
+              </span>
+            </mat-cell>
+            <mat-footer-cell *matFooterCellDef></mat-footer-cell>
           </ng-container>
-          <ng-container matColumnDef="item name">
-            <th mat-header-cell *matHeaderCellDef>Item Name</th>
-            <td mat-cell *matCellDef="let item">
-              {{item.itemName}}
-            </td>
-            <td mat-footer-cell *matFooterCellDef></td>
-          </ng-container>
-          <ng-container matColumnDef="unit">
-            <th mat-header-cell *matHeaderCellDef>Unit</th>
-            <td mat-cell *matCellDef="let item">{{item.unit}}</td>
-            <td mat-footer-cell *matFooterCellDef>Total</td>
+          <ng-container matColumnDef="item_name">
+            <mat-header-cell *matHeaderCellDef>Item</mat-header-cell>
+            <mat-cell
+              *matCellDef="let row;let i = index"
+              [satPopoverAnchor]="p"
+              tabindex="0"
+              (keyup.enter)="p.open()"
+              (click)="p.open()"
+            >
+              <ng-container *ngIf="row.item_name">
+                {{row.item_name}}
+              </ng-container>
+              <span class="add-comment" *ngIf="!row.item_name">
+                Add an item
+              </span>
+              <sat-popover
+                #p
+                hasBackdrop
+                xAlign="start"
+                yAlign="start"
+                (closed)="updateItem(row,i,$event)"
+              >
+                <inline-edit
+                  style="width: 400px !important;"
+                  [value]="row.item_name"
+                  column="item"
+                  [minimumPrice]="row.minimumPrice"
+                ></inline-edit>
+              </sat-popover>
+            </mat-cell>
+            <mat-footer-cell *matFooterCellDef> </mat-footer-cell>
           </ng-container>
           <ng-container matColumnDef="quantity">
-            <th mat-header-cell *matHeaderCellDef>Quantity</th>
-            <td mat-cell *matCellDef="let item">
-              {{item.quantity}}
-            </td>
-            <td mat-footer-cell *matFooterCellDef></td>
+            <mat-header-cell *matHeaderCellDef>Quantity</mat-header-cell>
+            <mat-cell
+              *matCellDef="let row"
+              [satPopoverAnchor]="p"
+              tabindex="0"
+              (keyup.enter)="p.open()"
+              (click)="p.open()"
+            >
+              <ng-container>
+                {{row.qty}}
+              </ng-container>
+
+              <sat-popover
+                #p
+                hasBackdrop
+                xAlign="start"
+                yAlign="start"
+                (closed)="updateQuantity(row, $event)"
+              >
+                <inline-edit
+                  [value]="row.qty"
+                  column="quantity"
+                  [minimumPrice]="row.minimumPrice"
+                ></inline-edit>
+              </sat-popover>
+            </mat-cell>
+            <mat-footer-cell *matFooterCellDef> </mat-footer-cell>
+          </ng-container>
+          <ng-container matColumnDef="rate">
+            <mat-header-cell *matHeaderCellDef>Rate</mat-header-cell>
+            <mat-cell
+              *matCellDef="let row"
+              [satPopoverAnchor]="p"
+              tabindex="0"
+              (keyup.enter)="p.open()"
+              (click)="p.open()"
+            >
+              <ng-container>
+                {{row.rate}}
+              </ng-container>
+              <sat-popover
+                #p
+                hasBackdrop
+                xAlign="start"
+                yAlign="start"
+                (closed)="updateRate(row, $event)"
+              >
+                <inline-edit
+                  [value]="row.rate"
+                  column="rate"
+                  [minimumPrice]="row.minimumPrice"
+                ></inline-edit>
+              </sat-popover>
+            </mat-cell>
+            <mat-footer-cell *matFooterCellDef>Total </mat-footer-cell>
           </ng-container>
           <ng-container matColumnDef="total">
-            <th mat-header-cell *matHeaderCellDef>Total</th>
-            <td mat-cell *matCellDef="let item">
-              {{item.total | currency}}
-            </td>
-            <td mat-footer-cell *matFooterCellDef>
-              {{getTotalCost() | currency}}
-            </td>
-            <td mat-cell *matCellDef="let item">
-              {{item.total}}
-            </td>
+            <mat-header-cell *matHeaderCellDef>Total</mat-header-cell>
+            <mat-cell *matCellDef="let row"
+              >{{row.rate * row.qty | curFormat | async}}</mat-cell
+            >
+            <mat-footer-cell *matFooterCellDef
+              >{{f.total.value | curFormat | async }}</mat-footer-cell
+            >
           </ng-container>
-          <tr
-            mat-header-row
-            *matHeaderRowDef="displayedColumns sticky:true"
-          ></tr>
-          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-          <tr
-            mat-footer-row
-            *matFooterRowDef="displayedColumns sticky:true"
-          ></tr>
-        </table>
+          <ng-container matColumnDef="delete">
+            <mat-header-cell *matHeaderCellDef></mat-header-cell>
+            <mat-cell *matCellDef="let row ; let i = index">
+              <ion-button
+                (click)="deleteRow(i)"
+                fill="clear"
+                class="ion-no-padding"
+                color="danger"
+              >
+                <ion-icon slot="icon-only" name="trash"></ion-icon>
+              </ion-button>
+            </mat-cell>
+            <mat-footer-cell *matFooterCellDef></mat-footer-cell>
+          </ng-container>
+          <mat-header-row
+            *matHeaderRowDef="displayedColumns; sticky: true"
+          ></mat-header-row>
+          <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+          <mat-footer-row
+            class="footer"
+            *matFooterRowDef="displayedColumns; sticky: true"
+          ></mat-footer-row>
+        </mat-table>
       </ion-item>
     </ion-card-content>
   </ion-card>
