feat(rma-frontend):Added autocomplete in customer field

--- a/packages/rma-frontend/src/app/warranty-ui/view-warranty-claims/service-invoices/add-service-invoice/add-service-invoice.page.html
+++ b/packages/rma-frontend/src/app/warranty-ui/view-warranty-claims/service-invoices/add-service-invoice/add-service-invoice.page.html
@@ -69,7 +69,21 @@
                   required
                   placeholder="Customer Name"
                   formControlName="customerName"
+                  [matAutocomplete]="auto"
                 />
+                <mat-autocomplete
+                  autoActiveFirstOption
+                  #auto="matAutocomplete"
+                  [displayWith]="getOptionText"
+                  (optionSelected)="customerChanged($event.option.value)"
+                >
+                  <mat-option
+                    *ngFor="let option of filteredCustomerList | async"
+                    [value]="option"
+                  >
+                    {{ option.customer_name }}
+                  </mat-option>
+                </mat-autocomplete>
                 <mat-error *ngIf="f.customerName.hasError('required')">
                   Customer Name is <strong>required</strong>
                 </mat-error>
