feat: PR cancel and UI Naming Series
PR cancel updates state
Customer UI as per naming series

--- a/packages/rma-frontend/src/app/credit-limit/credit-limit.page.html
+++ b/packages/rma-frontend/src/app/credit-limit/credit-limit.page.html
@@ -47,17 +47,32 @@
         style="width: 100%;"
       >
         <!-- Customer -->
-        <ng-container matColumnDef="customer">
+        <ng-container matColumnDef="name">
           <th
             mat-header-cell
             *matHeaderCellDef
-            mat-sort-header="customer"
+            mat-sort-header="name"
             (click)="setFilter()"
           >
-            Customer
+            Customer ID
           </th>
           <td mat-cell *matCellDef="let row">
             {{row.name}}
+          </td>
+        </ng-container>
+
+        <!-- Customer -->
+        <ng-container matColumnDef="customer_name">
+          <th
+            mat-header-cell
+            *matHeaderCellDef
+            mat-sort-header="customer_name"
+            (click)="setFilter()"
+          >
+            Customer Name
+          </th>
+          <td mat-cell *matCellDef="let row">
+            {{row.customer_name}}
           </td>
         </ng-container>
 
