--- a/packages/rma-frontend/src/app/sales-ui/add-sales-invoice/add-sales-invoice.page.html
+++ b/packages/rma-frontend/src/app/sales-ui/add-sales-invoice/add-sales-invoice.page.html
@@ -94,6 +94,9 @@
                     [value]="option"
                   >
                     {{ option.customer_name }}
+                    <small class="text-muted">
+                      {{ option.name}}
+                    </small>
                   </mat-option>
                 </mat-autocomplete>
                 <mat-error *ngIf="f.customer.hasError('required')">
