feat(rma-server):Added mat-option in branch field

--- a/packages/rma-frontend/src/app/warranty-ui/view-warranty-claims/service-invoices/add-service-invoice/add-service-invoice.page.html
+++ b/packages/rma-frontend/src/app/warranty-ui/view-warranty-claims/service-invoices/add-service-invoice/add-service-invoice.page.html
@@ -180,7 +180,20 @@
                   required
                   placeholder="Branch"
                   formControlName="branch"
+                  [matAutocomplete]="autoone"
                 />
+                <mat-autocomplete
+                  autoActiveFirstOption
+                  #autoone="matAutocomplete"
+                  [displayWith]="getWarehouseOptionText"
+                >
+                  <mat-option
+                    *ngFor="let option of filteredWarehouseList | async"
+                    [value]="option"
+                  >
+                    {{ option.warehouse }}
+                  </mat-option>
+                </mat-autocomplete>
                 <mat-error *ngIf="f.branch.hasError('required')">
                   Branch is <strong>required</strong>
                 </mat-error>
