feat(rma-frontend):Added feature auto-fetch data in service-invoice form

--- a/packages/rma-frontend/src/app/warranty-ui/view-warranty-claims/service-invoices/service-invoices.component.html
+++ b/packages/rma-frontend/src/app/warranty-ui/view-warranty-claims/service-invoices/service-invoices.component.html
@@ -12,7 +12,7 @@
         <ion-col class="ion-text-right">
           <ion-button
             color="tertiary"
-            [routerLink]="['/warranty/service-invoice', 'new']"
+            [routerLink]="['/warranty/service-invoice', 'add', invoiceUuid]"
           >
             Add
           </ion-button>
