--- a/packages/rma-frontend/src/app/job-ui/view-single-job/view-single-job.page.html
+++ b/packages/rma-frontend/src/app/job-ui/view-single-job/view-single-job.page.html
@@ -1,26 +1,48 @@
 
 <ion-header>
   <ion-toolbar>
-    <ion-title>Failed At : {{ getParsedDate(data.failedAt)}}</ion-title>
-    <ion-buttons slot="end" *ngIf="state.reset">
-      <ion-button (click)="resetJob()" color="danger">
-        Reset
-      </ion-button>
-    </ion-buttons>
-    <ion-buttons slot="end" *ngIf="state.retry">
-      <ion-button (click)="retryJob()" color="primary">
-        Requeue
-      </ion-button>
-    </ion-buttons>
+    <ion-title>
+      <ion-grid fixed>
+        <ion-row>
+          <ion-col size="6">
+            <ion-row>
+              <ion-col size="12">
+                Status : <ion-text color="primary"> {{ exportedJob?.data?.status }} </ion-text>
+              </ion-col>
+            </ion-row>
+            <ion-row>
+              <ion-col size="12">
+                Parent : <ion-text color="primary"> {{ exportedJob?.data?.parent }} </ion-text>
+              </ion-col>
+            </ion-row>
+          </ion-col>
+
+
+          <ion-col size="6">
+            <ion-row>
+              <ion-col size="6"></ion-col>
+              <ion-col size="6">
+                <ion-buttons *ngIf="state.reset">
+                  <ion-button (click)="resetJob()" color="danger">
+                    Reset
+                  </ion-button>
+                </ion-buttons>
+              </ion-col>
+            </ion-row>
+            <ion-row>
+              <ion-col size="6"></ion-col>
+              <ion-col size="6">
+                <ion-buttons  *ngIf="state.retry">
+                  <ion-button (click)="retryJob()" color="primary">
+                    Requeue
+                  </ion-button>
+                </ion-buttons>
+              </ion-col>
+            </ion-row>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </ion-title>
   </ion-toolbar>
 </ion-header>
-
-  <!-- <ion-header>
-    <ion-toolbar>
-      <ion-button *ngIf="retry" (click)="retryJob()">
-        <ion-icon slot="end" name="add"></ion-icon>
-        Requeue
-      </ion-button>
-    </ion-toolbar>
-  </ion-header> -->
-  {{ data.failReason}}
+<div [innerHTML]="message"></div>
