--- a/packages/rma-frontend/src/app/warranty-ui/view-warranty-claims/service-invoices/add-service-invoice/add-service-invoice.page.html
+++ b/packages/rma-frontend/src/app/warranty-ui/view-warranty-claims/service-invoices/add-service-invoice/add-service-invoice.page.html
@@ -16,7 +16,11 @@
     color="light"
     horizontal="end"
   >
-    <ion-fab-button class="fab-position" (click)="submitDraft()">
+    <ion-fab-button
+      class="fab-position"
+      [disabled]="serviceInvoiceForm.invalid"
+      (click)="submitDraft()"
+    >
       <ion-icon name="add"></ion-icon>
     </ion-fab-button>
   </ion-fab>
