feat(excel-rma): Add dynamic items to stock entry
added POC level stock entry with start and accept a stock entry

updated validation for stock entry

--- a/packages/rma-frontend/src/app/sales-ui/view-sales-invoice/serials/serials.component.html
+++ b/packages/rma-frontend/src/app/sales-ui/view-sales-invoice/serials/serials.component.html
@@ -357,9 +357,9 @@
       </ng-container>
 
       <ng-container matColumnDef="sales_warranty_period">
-        <mat-header-cell *matHeaderCellDef
-          >Sales Warranty Period [Months]</mat-header-cell
-        >
+        <mat-header-cell *matHeaderCellDef>
+          Sales Warranty Period [Months]
+        </mat-header-cell>
         <mat-cell *matCellDef="let row">
           <ng-container>
             {{ itemMap[row.item_code]?.salesWarrantyMonths }}
